@@ -360,6 +360,7 @@ namespace Mono.DocTest {
 		///  <para><c>M:Mono.DocTest.UseLists.Process(System.Collections.Generic.List{System.Int32})</c>.</para>
 		/// <para><see cref="M:System.Collections.Generic.List{System.Int32}.Remove(`0)" /></para>
 		/// </remarks>
+		/// <exception invalid="foo">text!</exception>
 		public void Process (List<int> list)
 		{
 			// Bug: only creation is looked for, so this generates an <exception/>
